# hope-country-workspace

./: .bumpversion.cfg  .dockerignore  .flake8  .gitignore  .mypy.ini  .pdm-python  .pre-commit-config.yaml  CHANGES.md  MANIFEST.in  README.md  bandit.yaml  compose.yaml  compose.yml  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  tox.ini
.github/: file-filters.yml
.github/actions/docker_build/: action.yml
.github/docker/: compose.ci.yml
.github/workflows/: ci.yml  docs.yml  test.yml
docker/: Dockerfile
docker/conf/: uwsgi.ini
docs/_scripts/: get_settings.py
docs/src/: .pages  contributing.md  dev_helpers.md  settings.md
docs/src/flows/: .pages  import.md  model.md
docs/src/run/: .pages  dev.md
src/country_workspace/: apps.py  constants.py  exceptions.py  state.py  tasks.py  types.pyi
src/country_workspace/admin/: __init__.py  base.py  batch.py  household.py  individual.py  job.py  locations.py  lookups.py  office.py  program.py  role.py  sync.py  user.py
src/country_workspace/config/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
src/country_workspace/config/fragments/: app.py  aurora.py  celery.py  constance.py  csp.py  debug_toolbar.py  jsoneditor.py  root.py  sentry.py  social_auth.py
src/country_workspace/contrib/aurora/: apps.py  client.py  forms.py
src/country_workspace/management/commands/: demo.py  sync.py  upgrade.py
src/country_workspace/middleware/: exception.py  state.py
src/country_workspace/migrations/: 0001_initial.py  0002_household_flex_files_individual_flex_files.py  0003_asyncjob.py
src/country_workspace/models/: __init__.py  base.py  batch.py  household.py  individual.py  jobs.py  locations.py  lookups.py  office.py  program.py  role.py  sync.py  user.py
src/country_workspace/security/: apps.py  backends.py  utils.py
src/country_workspace/social/: pipeline.py
src/country_workspace/sync/: client.py  office.py
src/country_workspace/sync/kobo/: auth.py  client.py  data.py  raw_data.py
src/country_workspace/utils/: __init__.py  constance.py  flags.py
src/country_workspace/validators/: base.py  household.py  registry.py
src/country_workspace/versioning/: admin.py  api.py  checkers.py  hope_fields.py  models.py  synclog.py
src/country_workspace/versioning/management/: manager.py
src/country_workspace/versioning/migrations/: 0001_initial.py  0002_rename_version_script.py
src/country_workspace/versioning/scripts/: 0001_initial.py  0002_hope_fd.py  0002_synclog.py  0003_default_datachechers.py
src/country_workspace/versions/: utils.py
src/country_workspace/versions/migrations/: 0001_initial.py
src/country_workspace/web/: context_processors.py
src/country_workspace/web/templates/: 403.html  layout.html  select_tenant.html
src/country_workspace/workspaces/: apps.py  backend.py  changelist.py  config.py  db.py  filters.py  forms.py  models.py  options.py  sites.py  utils.py
src/country_workspace/workspaces/admin/: __init__.py  batch.py  checker.py  forms.py  hh_ind.py  household.py  individual.py  job.py  program.py
src/country_workspace/workspaces/migrations/: 0001_initial.py
src/country_workspace/workspaces/templatetags/: base.py  workspace_list.py  workspace_modify.py  workspace_urls.py
src/hope_country_workspace/: apps.py  state.py
src/hope_country_workspace/admin/: __init__.py  household.py  individual.py
src/hope_country_workspace/admin_site/: apps.py  site.py
src/hope_country_workspace/config/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
src/hope_country_workspace/config/fragments/: app.py  celery.py  constance.py  csp.py  debug_toolbar.py  flags.py  (+4 more)
src/hope_country_workspace/hope/: admin.py  models.py
src/hope_country_workspace/kobo/: api.py
src/hope_country_workspace/middleware/: exception.py  state.py
src/hope_country_workspace/migrations/: 0001_initial.py  0002_alter_household_options_remove_household_address_and_more.py  0003_household_name.py
src/hope_country_workspace/models/: __init__.py  attachment.py  country_office.py  document.py  household.py  individual.py  program.py  role.py  user.py
src/hope_country_workspace/security/: admin.py  apps.py  models.py
src/hope_country_workspace/smart_importer/: models.py
src/hope_country_workspace/social/: pipeline.py
src/hope_country_workspace/tenant/: backend.py  config.py  db.py  sites.py  utils.py
src/hope_country_workspace/types/: http.pyi
src/hope_country_workspace/utils/: __init__.py  flags.py
src/hope_country_workspace/web/: urls.py
src/hope_country_workspace/workspaces/: apps.py  backend.py  changelist.py  models.py  options.py  sites.py  utils.py
tests/: .coveragerc  conftest.py  sync_all.yaml  sync_lookups.yaml  sync_maritalstatus.yaml  sync_observeddisability.yaml  sync_office.yaml  sync_programs.yaml  sync_relationship.yaml  sync_residencestatus.yaml  test_backend.py  test_celery.py  test_commands.py  test_flags.py  test_login.py  test_reverse.py  test_social_pipeline.py  test_state.py  test_sync.py  test_user_flow.py
tests/admin/: test_admin_constance.py  test_admin_smoke.py
tests/data/: .gitignore  locations.csv  missing_master.xlsx  r1.csv  r1.xlsx  rdi1.xlsx  rdi_one.xlsx  scenario4.xlsx  simple1.xlsx  simple2.xlsx
tests/extras/testutils/: perms.py  selenium.py  signers.py  types.pyi  utils.py
tests/functional/: conftest.py  test_f_household.py  test_f_login.py
tests/models/: test_m_batch.py  test_m_household.py
tests/tenant/: test_tenant_backend.py  test_tenant_filtering.py  test_tenant_manager.py  test_tenant_middleware.py  test_tenant_permissions.py
tests/utils/: test_utils_constance.py  test_utils_http.py
tests/versioning/: conftest.py  test_command.py  test_scripts.py  test_ver.py
tests/versioning/scripts/: 0001_test.py  0002_test.py  0003_test.py
tests/workspace/: test_ws_autocmplete.py  test_ws_backend.py  test_ws_batch.py  test_ws_household.py  test_ws_import.py  test_ws_individual.py  test_ws_program.py  test_ws_security.py  test_ws_smoke.py
tests/workspace/actions/: ind_updates.xlsx  test_ws_bulk.py  test_ws_mass_update.py  test_ws_regex.py
(+163 files in other folders)
